--- a/html/assets/css/style1.css
+++ b/html/assets/css/style1.css
@@ -74,7 +74,7 @@ body {
 }
 
 .tit1 h3 {
-	font-family: 'Noto Sans KR', serif;
+	
 	font-size: 34px;
 	font-weight: 400;
 	line-height: 40px;
@@ -101,7 +101,7 @@ body {
 }
 
 .tit2 h3 {
-	font-family: 'Noto Sans KR', serif;
+	
 	font-size: 26px;
 	font-weight: 400;
 	line-height: 30px;
@@ -124,7 +124,7 @@ body {
 }
 
 .tit3 h3 {
-	font-family: 'Noto Sans KR', serif;
+	
 	font-size: 26px;
 	font-weight: 400;
 	line-height: 30px;
@@ -208,9 +208,9 @@ body {
 #menu2 .menupage .left-menu {position:absolute; left:-50%; top:0;  width:50%; height:100vh; background-color:#403D66; transition: all 0.3s ease-in-out; text-align: center; padding-top:15%;}
 #menu2 .menupage .right-menu {position:absolute; right:-50%; top:0; width:50%; height:100vh; background-color:#525177; transition: all 0.3s ease-in-out; text-align: center; padding-top:15%;}
 #menu2 .menupage .menu-tit {font-family: 'Noto Sans KR', sans-serif; font-size: 12px; font-weight: 700; color:#fff; letter-spacing:3px; color:#F97070; line-height:30px;}
-#menu2 .menupage .menu-sub a {font-family: 'Noto Sans KR', serif; font-size: 30px; font-weight: 400; color:#fff;}
+#menu2 .menupage .menu-sub a { font-size: 30px; font-weight: 400; color:#fff;}
 #menu2 .menupage .menu-sub a:hover {color:#302F51;}
-#menu2 .menupage .menu-sub1 a {font-family: 'Noto Sans KR', serif; font-size: 20px; font-weight: 400; color:#fff;}
+#menu2 .menupage .menu-sub1 a { font-size: 20px; font-weight: 400; color:#fff;}
 #menu2.on {opacity:1; z-index: 79999;}
 #menu2 .menupage .menu-sub1 a:hover {color:#302F51;}
 #menu2.on .menupage .left-menu {left:0; transition: all 0.3s ease-in-out;}
@@ -429,6 +429,8 @@ body {
 	}
 }
 
+
+
 /* 마우스 스크롤 애니메이션 */
 .scroll-btn {
 	display: block;
@@ -449,7 +451,7 @@ body {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	border: 3px solid white;
+	border: 3px solid #111111;
 	border-radius: 23px;
 }
 
@@ -461,7 +463,7 @@ body {
 	width: 8px;
 	height: 8px;
 	margin: -4px 0 0 -4px;
-	background: white;
+	background: #111111;
 	border-radius: 50%;
 	-webkit-animation: ani-mouse 2.5s linear infinite;
 	-moz-animation: ani-mouse 2.5s linear infinite;
@@ -2354,38 +2356,38 @@ body {
 }
 
 #section0-1 .sub-work { 
-	font-family: 'noto sans kr', serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 50px;
 	font-weight: 400;
 	line-height: 60px;
-	color:#fff;
+	color:#111111;
 }
 
 #section0-1 .about-title { 
-	font-family: 'noto sans kr', serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 40px;
-	font-weight: 500;
+	font-weight: 700;
 	line-height: 40px;
 	color:#111111   ;
 }
 
 #section0-1 .about-me h2 { 
-	font-family: 'noto sans kr', serif;
+	font-family: 'Open Sans', sans-serif;
 	margin: 30px auto 10px;
-	font-size: 20px;
-	font-weight: 400;
+	font-size: 25px;
+	font-weight: 700;
 	line-height: 40px;
-	color:#fff;
+	color:rgb(10, 72, 122);
 }
 
 
 #section0-1 .about-me p { 
-	font-family: 'noto sans kr', serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 15px;
-	font-weight: 400;
+	font-weight: 600;
 	text-align: center;
-	line-height: 20px;
-	color:#fff;
+	line-height: 30px;
+	color:rgb(0, 0, 0);
 }
 
 #section1-1 {
@@ -2399,7 +2401,7 @@ body {
 	top: 10%;
 	right: 0;
 	left: 0;
-	font-family: 'noto sans kr', serif;
+	
 	font-weight: 400;
 	font-size: 40px;
 	text-align: center;
@@ -2436,7 +2438,7 @@ body {
 	top: 10%;
 	right: 0;
 	left: 0;
-	font-family: 'noto sans kr', serif;
+	
 	font-weight: 400;
 	font-size: 40px;
 	text-align: center;
