메인수정 함
123

--- a/html/assets/css/style1.css
+++ b/html/assets/css/style1.css
@@ -208,9 +208,12 @@ body {
 #menu2 .menupage .left-menu {position:absolute; left:-50%; top:0;  width:50%; height:100vh; background-color:#403D66; transition: all 0.3s ease-in-out; text-align: center; padding-top:15%;}
 #menu2 .menupage .right-menu {position:absolute; right:-50%; top:0; width:50%; height:100vh; background-color:#525177; transition: all 0.3s ease-in-out; text-align: center; padding-top:15%;}
 #menu2 .menupage .menu-tit {font-family: 'Noto Sans KR', sans-serif; font-size: 12px; font-weight: 700; color:#fff; letter-spacing:3px; color:#F97070; line-height:30px;}
+#menu2 .menupage .menu-tit2 {font-family: 'Noto Sans KR', sans-serif; font-size: 12px; font-weight: 700; color:#fff; letter-spacing:3px; color:#65ec6c; line-height:30px;}
 #menu2 .menupage .menu-sub a { font-size: 30px; font-weight: 400; color:#fff;}
 #menu2 .menupage .menu-sub a:hover {color:#302F51;}
 #menu2 .menupage .menu-sub1 a { font-size: 20px; font-weight: 400; color:#fff;}
+#menu2 .menupage .menu-sub2 a { font-size: 25px; font-weight: 400; color:#fff;}
+#menu2 .menupage .menu-sub2 a:hover {color:#302F51;}
 #menu2.on {opacity:1; z-index: 79999;}
 #menu2 .menupage .menu-sub1 a:hover {color:#302F51;}
 #menu2.on .menupage .left-menu {left:0; transition: all 0.3s ease-in-out;}
