'Open Sans', sans-serif;
적용

--- a/html/assets/css/style1.css
+++ b/html/assets/css/style1.css
@@ -3,7 +3,7 @@
 /*font-family: 'Noto Sans KR', sans-serif;*/
 
 body {
-	font-family: 'Noto Sans KR', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -207,8 +207,8 @@ body {
 #menu2 .menupage {overflow:hidden; }
 #menu2 .menupage .left-menu {position:absolute; left:-50%; top:0;  width:50%; height:100vh; background-color:#403D66; transition: all 0.3s ease-in-out; text-align: center; padding-top:15%;}
 #menu2 .menupage .right-menu {position:absolute; right:-50%; top:0; width:70%; height:100vh; background-color:#525177; transition: all 0.3s ease-in-out; text-align: center; padding-top:15%;}
-#menu2 .menupage .menu-tit {font-family: 'Noto Sans KR', sans-serif; font-size: 12px; font-weight: 700; color:#fff; letter-spacing:3px; color:#F97070; line-height:30px;}
-#menu2 .menupage .menu-tit2 {font-family: 'Noto Sans KR', sans-serif; font-size: 12px; font-weight: 700; color:#fff; letter-spacing:3px; color:#65ec6c; line-height:30px;}
+#menu2 .menupage .menu-tit {font-family: 'Open Sans', sans-serif; font-size: 12px; font-weight: 700; color:#fff; letter-spacing:3px; color:#F97070; line-height:30px;}
+#menu2 .menupage .menu-tit2 {font-family: 'Open Sans', sans-serif; font-size: 12px; font-weight: 700; color:#fff; letter-spacing:3px; color:#65ec6c; line-height:30px;}
 #menu2 .menupage .menu-sub a { font-size: 30px; font-weight: 400; color:#fff;}
 #menu2 .menupage .menu-sub a:hover {color:#302F51;}
 #menu2 .menupage .menu-sub1 a { font-size: 20px; font-weight: 400; color:#fff;}
@@ -496,7 +496,7 @@ body {
 
 .right-container .right-title {
 	position: absolute;
-	font-family: 'Noto Sans KR';
+	font-family: 'Open Sans', sans-serif;
 	font-style: normal;
 	font-weight: 100;
 	color: #fff;
@@ -523,7 +523,7 @@ body {
 }
 
 .right-container .right-title h5 {
-	font-family: 'Noto Sans KR';
+	font-family: 'Open Sans', sans-serif;
 	font-style: normal;
 	font-weight: 100;
 	margin-top: 5px;
@@ -538,7 +538,7 @@ body {
 }
 
 .right-container .right-title p {
-	font-family: 'Noto Sans KR';
+	font-family: 'Open Sans', sans-serif;
 	font-style: normal;
 	font-weight: 100;
 	font-size: 12px;
@@ -2639,7 +2639,7 @@ body {
 
 
 #section0-2 .e-mail {
-	font-family: 'Noto Sans KR', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: 500; 
 	font-size: 24px;
 	line-height: 30px;
@@ -2650,7 +2650,7 @@ body {
 }
 
 .nav2 .menu-sub3 {  
-	font-family: 'Noto Sans KR', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 	font-size: 24px;
 	line-height: 30px;
