--- a/html/assets/css/mediaquery.css
+++ b/html/assets/css/mediaquery.css
@@ -63,6 +63,12 @@
  
 @media (max-width:768px){
 
+
+				  	 .menu-sub {margin-top: 10px; 	margin-bottom: 15px;}
+	#menu2 .menupage .menu-sub a { font-size: 19px; font-weight: 400; color:#fff;}
+					 .menu-sub2 {margin-top: 10px; 	margin-bottom: 15px;}
+	#menu2 .menupage .menu-sub2 a { font-size: 17px; font-weight: 400; color:#fff;}
+
 	.nav2 .menu-sub3 {  
 		font-family: 'Open Sans', sans-serif;
 		font-weight: 400;
@@ -72,15 +78,9 @@
 		margin-bottom: 15px;
 		font-style: normal;
 		color: #ffffff;
-	
 	}
-	.menu-sub {margin-top: 10px; 	margin-bottom: 15px;}
-	#menu2 .menupage .menu-sub a { font-size: 15px; font-weight: 400; color:#fff;}
-	.menu-sub2 {margin-top: 10px; 	margin-bottom: 15px;}
-	#menu2 .menupage .menu-sub2 a { font-size: 15px; font-weight: 400; color:#fff;}
 
-
-	.pdf {
+	.right-menu .pdf {
 		padding: 0 20px;
 		border: 3px solid #fff;
 		border-radius: 30px;
@@ -88,9 +88,8 @@
 		font-family: 'Open Sans', sans-serif;
 		font-weight: 500;
 		font-size: 13px;
-		line-height: 40px;
-		margin: 0 auto;
-		margin-top: 20px;
+		line-height: 30px;
+		margin: -10px auto;
 		color:#fff;
 	}
 
