--- a/html/assets/css/style1.css
+++ b/html/assets/css/style1.css
@@ -2682,8 +2682,7 @@ body {
 	font-weight: 700;
 	font-size: 15px;
 	line-height: 40px;
-	margin: 0 auto;
-	margin-top: 20px;
+	margin: 5px auto;
 	color:#fff;
 }
 .pdf a{
